[package]
name = "shiromc-midi-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
midi-toolkit-rs = "0.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
